unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/A1_TrackerAPI_tokens__mdt.object-meta.xml
<CustomObject>
    <description>To store the access tokens returned by Tracker API auth call, along with the access keys generated within SFSC</description>
    <label>A1 TrackerAPI tokens</label>
    <pluralLabel>A1 TrackerAPI tokens</pluralLabel>
</CustomObject>