unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/fields/access_key__c.field-meta.xml
<CustomField>
    <fullName>access_key__c</fullName>
    <label>access key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>