unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/fields/access_token__c.field-meta.xml
<CustomField>
    <fullName>access_token__c</fullName>
    <label>access token</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>