unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/fields/AppName__c.field-meta.xml
<CustomField>
    <fullName>AppName__c</fullName>
    <defaultValue>&quot;DWTracker&quot;</defaultValue>
    <label>AppName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>