unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/fields/key_expires_at__c.field-meta.xml
<CustomField>
    <fullName>key_expires_at__c</fullName>
    <label>key expires at</label>
    <type>DateTime</type>
</CustomField>