unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/fields/token_expires_at__c.field-meta.xml
<CustomField>
    <fullName>token_expires_at__c</fullName>
    <label>token expires at</label>
    <type>DateTime</type>
</CustomField>