unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/fields/token_expires_in__c.field-meta.xml
<CustomField>
    <fullName>token_expires_in__c</fullName>
    <label>token expires in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>