unpackaged/main/default/objects/A1_TrackerAPI_tokens__mdt/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>BrandId__c</columns>
    <columns>access_token__c</columns>
    <columns>token_expires_at__c</columns>
    <columns>access_key__c</columns>
    <columns>key_expires_at__c</columns>
    <filterScope>Everything</filterScope>
    <label>all fields</label>
</ListView>